<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:padding="@dimen/chart_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/text_padding">

            <TextView
                android:id="@+id/lb_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscribe_button_label" />

            <ToggleButton
                android:id="@+id/bt_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/subscribe_button_content_description"
                android:nextFocusDown="@id/bt_update_today"
                android:textOff="@string/strat_subscribe"
                android:textOn="@string/stop_subscribe" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/text_padding">

            <TextView
                android:id="@+id/lb_update_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/update_today_button_label_content_description"
                android:text="@string/update_today_button_label" />

            <Button
                android:id="@+id/bt_update_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/update_today_button_content_description"
                android:nextFocusDown="@id/bt_update_yesterday"
                android:nextFocusUp="@id/bt_recording"
                android:text="@string/update_today_button" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/text_padding">

            <TextView
                android:id="@+id/lb_update_yesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/update_yesterday_button_label_content_description"
                android:text="@string/update_yesterday_button_label" />

            <Button
                android:id="@+id/bt_update_yesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/update_yesterday_button_content_description"
                android:nextFocusDown="@id/bt_clear_history"
                android:nextFocusUp="@id/bt_update_today"
                android:text="@string/update_yesterday_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/text_padding">

            <TextView
                android:id="@+id/lb_clear_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/clear_history_button_label_content_description"
                android:text="@string/clear_history_button_label" />

            <Button
                android:id="@+id/bt_clear_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/clear_history_button_content_description"
                android:nextFocusUp="@id/bt_update_yesterday"
                android:text="@string/clear_history_button" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>