<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/widgetColorBg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/widget_margin"
    android:paddingEnd="@dimen/widget_padding"
    android:paddingStart="@dimen/widget_padding"
    android:paddingTop="@dimen/widget_padding">

    <TextView
        android:id="@+id/tv_widget_bmivalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/widget_bmi_content_description"
        android:paddingTop="@dimen/widget_text_padding"
        android:text="@string/widget_bmi_value"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_widget_bmistatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/widget_bmi_status_content_description"
        android:paddingTop="@dimen/widget_text_padding"
        android:text="@string/widget_bmi_status"
        android:textColor="@color/white"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bt_widget_bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/widget_bmi_button_content_description"
            android:gravity="right"
            android:paddingTop="@dimen/widget_text_padding"
            android:text="@string/widget_bmi_button"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>