<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/backStrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_view_margin"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/card_view_margin"
                android:layout_marginStart="@dimen/card_view_margin"
                android:layout_marginTop="@dimen/card_view_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bmiValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/card_bmi_value_content_description"
                    android:ellipsize="end"
                    android:text="@string/card_bmi_value"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bmiStatusDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/card_bmi_staus_description_content_description"
                    android:ellipsize="end"
                    android:text="@string/card_bmi_staus_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/createdAt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/card_bmi_date_content_description"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/card_bmi_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>


        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>